--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,25 @@
   position: relative;
 }
 
+.loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  color: aliceblue;
+  font-size: 32px;
+  font-family: comic;
+}
+
+.loading > img {
+  object-fit: cover;
+  margin: 60px 0;
+}
+
 /*HOME PAGE*/
 
 .card-container {
@@ -17,7 +36,12 @@
   position: -webkit-sticky;
   position: sticky;
   top: calc(100vh/2);
-  margin: 0 20px
+  margin: 0 20px;
+  opacity: 0.5;
+}
+
+.next-page > img {
+  transform: rotate(180deg)
 }
 
 .home-page {
@@ -28,8 +52,8 @@
 }
 
 .home-page img {
-  width: 100px;
-  height: 100px;
+  width: 90px;
+  height: 90px;
 }
 
 
