--- a/src/components/charCard/charCard.css
+++ b/src/components/charCard/charCard.css
@@ -4,16 +4,29 @@
   align-items: center;
   border: solid 7px rgb(0, 0, 27);
   display: flex;
-  width: 310px;
+  width: 210px;
   margin:35px 40px;
   box-shadow: 0 2px 5px 5px white;
   background-color: black;
+  transition: 0.3s;
+  -webkit-filter: grayscale(65%);
+  filter: grayscale(65%);
+}
+
+.char-card-container:hover {
+  box-shadow: 0 5px 50px 0 #15f4ee inset, 0 5px 50px 0 #15f4ee,
+              0 5px 50px 0 #15f4ee inset, 0 5px 50px 0 #15f4ee;
+              -webkit-filter: grayscale(0%);
+              filter: grayscale(0%);
 }
 
 .char-card img {
-  height: 300px;
-  width: 300px;
+  height: 210px;
+  width: 210px;
   object-fit: cover;
+  margin-top: 5px;
+  justify-content: center;
+  align-items: center;
 }
 
 .chard-card {
@@ -26,7 +39,7 @@
   font-family: 'Architects Daughter', cursive;
   text-decoration: none;
   color: aliceblue;
-  font-size: 30px;
+  font-size: 20px;
   display: flex;
   justify-content: center;
 }
@@ -35,7 +48,7 @@
   text-decoration: inherit;
   color: white;
   font-family: 'comic';
-  width: 300px;
+  width: 210px;
   font-family: 'Handlee', cursive;
 }
 
